Переименованы контексты. Добавлен констекст для работы с таблице Horses, Изменена часть репозиториев, добавлен репозиторий и интерфейс для него для работы с таблицей Horses. Модифицирона WPF клиент
